Mon Apr 24 16:35:08 2000  Jim Wilson  <wilson@cygnus.com>

	* gas/ia64/opc-i.s: Regenerate.
	* gas/ia64/opc-f.pl: Add explicit stop at end.
	
2000-04-22  Timothy Wall  <twall@cygnus.com>

	* gas/ia64/opc-f.d: Disassemble zeroes to verify break.f.
	* gas/ia64/opc-f.s: Add an explicit stop to make IAS output match.

Fri Apr 21 13:20:53 2000  Richard Henderson  <rth@cygnus.com>
			  David Mosberger  <davidm@hpl.hp.com>
			  Timothy Wall <twall@cygnus.com>
			  Jim Wilson  <wilson@cygnus.com>

	* gas/vtable/vtable.exp: Disable for ia64.
	* gas/testsuite/gas/ia64: New testsuite directory.
	
2000-04-03  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/general.s: Check 16-bit immediates, and move call/jump
	checks to start.
	* gas/i386/general.l: Likewise.

2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>

	* gas/mn10300/am33_5.s: Check that negative SP offsets are encoded
	with 32 bits, not with the unsigned shorter opcodes.
	* gas/mn10300/basic.exp: Likewise.

2000-03-31  Alexandre Oliva  <aoliva@cygnus.com>

	* lib/gas-defs.exp (regexp_diff): Don't break on the first
	difference, list them all.

2000-03-29  Nick Clifton <nickc@cygnus.com

	* gas/arm/thumb.s: Add test of bal instruction.

2000-03-27  Alan Modra  <alan@linuxcare.com.au>

	* gas/ieee-fp/x930509a.exp (dotest): Fix test for
	LISTING_WORD_SIZE==1.
	* gas/all/gas.exp (do_930509a): Same here.
	* gas/all/cond.d: And here.

2000-03-16  Nick Clifton  <nickc@cygnus.com>

	* gas/arm/arm.exp: Run branch.s test.
	Run tests if target is strongarm.

	* gas/arm/branch.s: New test.  Make sure that assembler can handle
	same-section branch relocations properly.

	* gas/arm/branch.d: New file.  Expected output from assembling
	branch.s.

2000-03-10  Geoffrey Keating  <geoffk@cygnus.com>

	* gas/mips/empic.d: New file.
	* gas/mips/empic.s: New file.
	* gas/mips/mips16-e.d: New file.
	* gas/mips/mips16-e.s: New file.
	* gas/mips/mips16-f.d: New file.
	* gas/mips/mips16-f.s: New file.